; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_omap24xxcam.c_omap24xxcam_vbq_release.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_omap24xxcam.c_omap24xxcam_vbq_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.videobuf_queue = type { i32 }
%struct.videobuf_buffer = type { i64, i32 }
%struct.videobuf_dmabuf = type { i32, i32, i32 }

@V4L2_MEMORY_MMAP = common dso_local global i64 0, align 8
@DMA_NONE = common dso_local global i32 0, align 4
@VIDEOBUF_NEEDS_INIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.videobuf_queue*, %struct.videobuf_buffer*)* @omap24xxcam_vbq_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @omap24xxcam_vbq_release(%struct.videobuf_queue* %0, %struct.videobuf_buffer* %1) #0 {
  %3 = alloca %struct.videobuf_queue*, align 8
  %4 = alloca %struct.videobuf_buffer*, align 8
  %5 = alloca %struct.videobuf_dmabuf*, align 8
  store %struct.videobuf_queue* %0, %struct.videobuf_queue** %3, align 8
  store %struct.videobuf_buffer* %1, %struct.videobuf_buffer** %4, align 8
  %6 = load %struct.videobuf_buffer*, %struct.videobuf_buffer** %4, align 8
  %7 = call %struct.videobuf_dmabuf* @videobuf_to_dma(%struct.videobuf_buffer* %6)
  store %struct.videobuf_dmabuf* %7, %struct.videobuf_dmabuf** %5, align 8
  %8 = load %struct.videobuf_buffer*, %struct.videobuf_buffer** %4, align 8
  %9 = call i32 @videobuf_waiton(%struct.videobuf_buffer* %8, i32 0, i32 0)
  %10 = load %struct.videobuf_buffer*, %struct.videobuf_buffer** %4, align 8
  %11 = getelementptr inbounds %struct.videobuf_buffer, %struct.videobuf_buffer* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @V4L2_MEMORY_MMAP, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %32

15:                                               ; preds = %2
  %16 = load %struct.videobuf_queue*, %struct.videobuf_queue** %3, align 8
  %17 = getelementptr inbounds %struct.videobuf_queue, %struct.videobuf_queue* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.videobuf_dmabuf*, %struct.videobuf_dmabuf** %5, align 8
  %20 = getelementptr inbounds %struct.videobuf_dmabuf, %struct.videobuf_dmabuf* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.videobuf_dmabuf*, %struct.videobuf_dmabuf** %5, align 8
  %23 = getelementptr inbounds %struct.videobuf_dmabuf, %struct.videobuf_dmabuf* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.videobuf_dmabuf*, %struct.videobuf_dmabuf** %5, align 8
  %26 = getelementptr inbounds %struct.videobuf_dmabuf, %struct.videobuf_dmabuf* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @dma_unmap_sg(i32 %18, i32 %21, i32 %24, i32 %27)
  %29 = load i32, i32* @DMA_NONE, align 4
  %30 = load %struct.videobuf_dmabuf*, %struct.videobuf_dmabuf** %5, align 8
  %31 = getelementptr inbounds %struct.videobuf_dmabuf, %struct.videobuf_dmabuf* %30, i32 0, i32 0
  store i32 %29, i32* %31, align 4
  br label %40

32:                                               ; preds = %2
  %33 = load %struct.videobuf_queue*, %struct.videobuf_queue** %3, align 8
  %34 = load %struct.videobuf_buffer*, %struct.videobuf_buffer** %4, align 8
  %35 = call %struct.videobuf_dmabuf* @videobuf_to_dma(%struct.videobuf_buffer* %34)
  %36 = call i32 @videobuf_dma_unmap(%struct.videobuf_queue* %33, %struct.videobuf_dmabuf* %35)
  %37 = load %struct.videobuf_buffer*, %struct.videobuf_buffer** %4, align 8
  %38 = call %struct.videobuf_dmabuf* @videobuf_to_dma(%struct.videobuf_buffer* %37)
  %39 = call i32 @videobuf_dma_free(%struct.videobuf_dmabuf* %38)
  br label %40

40:                                               ; preds = %32, %15
  %41 = load i32, i32* @VIDEOBUF_NEEDS_INIT, align 4
  %42 = load %struct.videobuf_buffer*, %struct.videobuf_buffer** %4, align 8
  %43 = getelementptr inbounds %struct.videobuf_buffer, %struct.videobuf_buffer* %42, i32 0, i32 1
  store i32 %41, i32* %43, align 8
  ret void
}

declare dso_local %struct.videobuf_dmabuf* @videobuf_to_dma(%struct.videobuf_buffer*) #1

declare dso_local i32 @videobuf_waiton(%struct.videobuf_buffer*, i32, i32) #1

declare dso_local i32 @dma_unmap_sg(i32, i32, i32, i32) #1

declare dso_local i32 @videobuf_dma_unmap(%struct.videobuf_queue*, %struct.videobuf_dmabuf*) #1

declare dso_local i32 @videobuf_dma_free(%struct.videobuf_dmabuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
